--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,21 @@
     <modules>
         <module>QPublisher</module>
         <module>QConsumer</module>
+        <module>DirectExchangePublisher</module>
+         <module>DirectExchangeGreenQConsumer</module>
+        <module>DirectExchangeYellowQConsumer</module>
+        <module>DirectExchangeRedQConsumer</module>
     </modules>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.16.0</version>
+        </dependency>
+    </dependencies>
 </project>
